2010-10-25  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c, data/snippets.conf:
   Move HTML automatic <table> tag completion into a 'table' snippet
   so the user can decide when to use it (patch by Eugene Arshinov,
   thanks).
 * src/interface.c, src/prefs.c, src/about.c, src/keyfile.c,
   src/document.c, src/document.h, THANKS, geany.glade:
   Add 'Ensure consistent line endings' file saving pref (patch by
   Manuel Bua, thanks).
 * src/utils.c, src/utils.h, src/editor.c:
   Auto-indent after an HTML/XML line with a missing closing tag (patch
   by Eugene Arshinov, thanks).
   Behaviour only applies if XML tag autoclosing is off.
 * src/templates.c, src/build.c, src/document.c, src/editor.c,
   src/symbols.c, plugins/saveactions.c:
   Remove unnecessary uses of FILETYPE_ID() macro with
   GeanyDocument::file_type.
 * data/filetypes.xml:
   Add HTML5 attributes (thanks to Ross McKay).


2010-10-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/prefs.c:
   Fix not changing edited keybindings when cancelling the Preferences
   dialog.
 * data/filetypes.xml:
   Add HTML5 element names (thanks to Ross McKay).


2010-10-21  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/utils.c, src/filetypes.c:
   Remove filetype default extensions from code.
 * src/filetypes.c:
   Allow 'Foo=' in filetype_extensions.conf to remove all patterns.
 * src/prefs.c:
   Refactor shared code with kb_cell_edited_cb().


2010-10-20  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c:
   Use radio buttons for View->Editor->Color Schemes menu.
   Don't hide the menu when only the default item is available.
 * data/colorschemes, data/colorschemes/alt.conf, wscript, Makefile.am:
   Add alternative color scheme based on Python colors.
 * scintilla/LexErlang.cxx, scintilla/makefile.win32,
   scintilla/KeyWords.cxx, scintilla/Makefile.am, src/highlighting.c,