@@ -6,7 +6,7 @@
 <meta name="generator" content="Docutils 0.4: http://docutils.sourceforge.net/" />
 <title>Geany</title>
 <meta name="authors" content="Enrico Tröger  Nick Treleaven  Frank Lanitz" />
-<meta name="date" content="2010-10-07" />
+<meta name="date" content="2010-10-15" />
 <style type="text/css">
 
 /*
@@ -139,7 +139,7 @@ Stylesheet for Geany's documentation based on a version of John Gabriele.
 <br />Nick Treleaven
 <br />Frank Lanitz</td></tr>
 <tr><th class="docinfo-name">Date:</th>
-<td>2010-10-07</td></tr>
+<td>2010-10-15</td></tr>
 <tr><th class="docinfo-name">Version:</th>
 <td>0.20</td></tr>
 </tbody>
@@ -2317,7 +2317,7 @@ meanings in different contexts - e.g. for snippet completion.</p>
 <dd>Whether to replace special keywords after typing Tab into a
 pre-defined text snippet.
 See <a class="reference" href="#user-definable-snippets">User-definable snippets</a>.</dd>
-<dt>XML tag autocompletion</dt>
+<dt>XML/HTML tag autocompletion</dt>
 <dd>When you open an XML tag automatically generate its completion tag.</dd>
 <dt>Automatic continuation multi-line comments</dt>
 <dd><p class="first">Continue automatically multi-line comments in languages like C, C++
@@ -6264,7 +6264,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference" href="geany.txt">View document source</a>.
-Generated on: 2010-10-15 17:13 UTC.
+Generated on: 2010-10-26 15:07 UTC.
 Generated by <a class="reference" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
